Style: Fixes on layout spacing, changing the Icon and Title on browser.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
- display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -7,22 +7,34 @@ body {
   margin: 0;
   background-color: #282A36; 
 }
+
 .app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
   padding: 15px;
-  min-height: 100vh;
-  justify-content: center;
+  min-height: 80vh;
+  justify-content: flex-start;
   background-color: #D9D9D9; 
   color: #1E1E1E;
   z-index: 1;
   border-radius: 15px;
+  font-family: "Inter", sans-serif !important;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100px;
+}
+
+.add-item-form {
+  width: 85%;
+  margin-bottom: 30px;
+}
+
+.task-list {
+  width: 100%;
+  height: 80%;
 }
